fix: dark mode

--- a/style.css
+++ b/style.css
@@ -15,7 +15,27 @@
         border-radius: 8px;
         border: 2px solid rgb(160, 160, 189);
     }
+    .trilho{
+        width: 80px;
+        height: 30px;
+        background-color: #4d4d4d;
+        border-radius: 150px;
+        position: relative;
+        cursor: pointer;
+    }
+    .h3{font-family: 'Courier New', Courier, monospace;
 
+    }
+    .indicador{
+        width: 40px;
+        height: 30px;
+        background-color: #000;
+        border-radius: 50%;
+        transform: scale(.9);
+        position: absolute;
+        left: 0;
+        transition: .5s;
+    }
     .introducao h1 {
         font-family: 'Arial', serif, sans-serif;
         color: #23395B;
@@ -29,10 +49,9 @@
         font-family: 'Arial', serif, sans-serif;
         margin-bottom: 15px; 
         line-height: 1.6; 
-        color: #333; /
+        color: #333; 
 
     }
-
     .subtitulo {
         font-family: 'Arial', serif, sans-serif;
         color: #cbf7ed;
@@ -79,4 +98,7 @@
     .button-reacao:hover {
         background-color: #23395B;
         color: #cbf7ed;
+    }
+    .trilho.dark .indicador{
+        left: 43px;
     }
